<?xml version="1.0"?>

<package>
  <name>ase</name>
  <version>0.0.0</version>
  <description>ase project mapping test package</description>

  <maintainer email="mrothgaenger@techfak.uni-bielefeld.de">Markus Rothgaenger</maintainer>  

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>amiro_msgs</build_depend>
  <build_depend>sensor_mockup</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>amiro_msgs</run_depend>
  <run_depend>sensor_mockup</run_depend>

  <export>
  </export>
</package>
